<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/Card"
        android:layout_width="match_parent"
        android:layout_height="186dp"
        android:layout_margin="1dp"
        android:layout_weight="1"
        android:elevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageViewProductImage"
                android:layout_width="161dp"
                android:layout_height="155dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/product_image" />

            <TextView
                android:id="@+id/textViewProductId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@id/imageViewProductImage"
                android:text="@string/productid" />

            <TextView
                android:id="@+id/textViewProductName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewProductId"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@id/imageViewProductImage"
                android:text="@string/product_name" />

            <TextView
                android:id="@+id/textViewProductPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewProductName"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@id/imageViewProductImage"
                android:text="@string/product_price" />

            <TextView
                android:id="@+id/textViewProductQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewProductPrice"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@id/imageViewProductImage"
                android:text="@string/product_quantity" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>
